<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jamoogy.myappportfolio.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:paddingTop="50dp"
            android:paddingBottom="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingBottom="12dp"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/header_and_button_color"
            android:text="@string/header" />

            <Button
                android:id="@+id/popular_movies"
                style="@style/Button_Style"
                android:text="@string/popular_movies"
                />

            <Button
                android:id="@+id/stock_hawk"
                style="@style/Button_Style"
                android:text="@string/stock_hawk"/>

            <Button
                style="@style/Button_Style"
                android:text="@string/build_it_bigger"/>

            <Button
                style="@style/Button_Style"
                android:text="@string/make_your_app_material"/>

            <Button
                style="@style/Button_Style"
                android:text="@string/go_ubiquitous"/>

            <Button
                style="@style/Button_Style"
                android:text="@string/capstone"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
